--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(cnats CONFIG REQUIRED)
 
 set(PROJECT_SOURCES
     src/main.cpp
+    src/MathPicker.cpp
     src/NatsPublisher.cpp
     src/NatsSubscriber.cpp
 )
