removed "libcrypto" dependency in nats library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ set(CLANG_UML_INCLUDE_ARGS "-I\"${CMAKE_CURRENT_SOURCE_DIR}/include\"")
 set(NATS_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(NATS_BUILD_STREAMING OFF CACHE BOOL "" FORCE)
 
+set(NATS_BUILD_WITH_TLS OFF CACHE BOOL "" FORCE)
+set(NATS_BUILD_TLS_FORCE_HOST_VERIFY OFF CACHE BOOL "" FORCE)
+set(NATS_BUILD_TLS_USE_OPENSSL_1_1_API OFF CACHE BOOL "" FORCE)
+
 include(FetchContent)
 FetchContent_Declare(
   nats
