Added logger wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ endif()
 add_library(${PROJECT_LIBS}
     src/http_handler.cpp
     src/nats_manager.cpp
+    src/logger.cpp
 )
 target_include_directories(${PROJECT_LIBS} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include
